# ampm-analysis

./: .gitignore  Archimedes Density TiAg.xlsx  CHANGELOG.md  JR306_parts.csv  README.md  ampm-replacement.py  ampm.py  app.py  app.spec  archi.py  cluster.py  config.py  config.toml  cov.py  explore.py  get_parts.py  launcher.py  makefile  minikmeans.py  old-ampm.py  params.py  pyproject.toml  reg_XYLv.mat  setup.bat  structure.txt  view_layers.py
ampm/: __init__.py  cluster_cache.py  clustering.py  config.py  correction.py  datastore.py  mask_cache.py  masking.py  memprof.py  parts.py  plotting.py  sampling.py  setup_build.py  stats.py
ampm/views/: __init__.py  bar.py  contour.py  cov_bar.py  k_distance.py  kde.py  layer_viewer.py  scatter_3d.py  single_layer.py
docs/: CACHING.md  CLUSTERING.md  CORRECTION.md  DATAHUB.md  PARTS.md  PIPELINE.md  PLOTTING.md
etc/: Archimedes Density TiAg.xlsx  archi.py  density.py  plot.py
examples/: cov.py  cov_direct.py  example_view.py  parametric.py  tune_eps.py  view_3d.py  view_layers.py
examples/pipeline/: 01_load_and_mask.py  02a_assign_parts_direct.py  03_compute_cov.py  (+3 more)
tests/: conftest.py  test_cluster_cache.py  test_clustering.py  test_config.py  test_correction.py  test_datastore.py  test_mask_cache.py  test_masking.py  test_memprof.py  test_parts.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_plotting.py  test_sampling.py  test_setup_build.py  test_stats.py  test_stl_stream.py
(+1 files in other folders)
