[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ampm-analyzer"
version = "1.2.0"
description = "Analysis pipeline for Renishaw 500S PBF-LB AMPM monitoring data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Oliver H. Page", email = "oliverhpage@gmail.com"},
]
license = {text = "All rights reserved"}
dependencies = [
    "polars>=1.0,<2",
    "pyarrow>=14,<25",
    "plotly>=5.0,<7",
    "trimesh>=4.0,<5",
    "shapely>=2.0,<3",
    "rtree>=1.0,<2",
    "networkx>=3.0,<4",
    "scikit-learn>=1.3,<2",
    "scipy>=1.10,<2",
    "numpy>=1.24,<3",
    "PyQt6>=6.5,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pyinstaller>=6.21,<7"
]

[tool.setuptools.packages.find]
include = ["ampm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]